# short-link

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  justfile
.github/workflows/: audit.yml  general.yml
.sqlx/: query-9ab0ba50a0fa9ea4b6e68fb3ab61f60279b878ba9c80d5f96c99c09e8a2b8faf.json  query-d32e422fa31d3d774862c1f7293609ea0419b85798e166c0233cf91184534aa4.json
config/: config.yml
docs/: openapi.yml
migrations/: 20250625180946_create_links_table.down.sql  20250625180946_create_links_table.up.sql
scripts/: database.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: link.rs  mod.rs
tests/: common.rs  health_check.rs  link.rs  short_link.rs
