[package]
name = "short_link"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
