[package]
name = "short_link"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
config = "0.15.11"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
claims = "0.8.0"
reqwest = { version = "0.12.20", features = ["json"] }
