[package]
name = "short-link"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
config = "0.15.11"
dotenv = "0.15.0"
rand = "0.9.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
claims = "0.8.0"
reqwest = { version = "0.12.20", features = ["json"] }
